# r2x-core

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .release-please-config.json  .release-plexos-config.json  AGENTS.md  CHANGELOG.html  CHANGELOG.md  README.md  REFACTORING_SUMMARY.md  SIMPLIFICATIONS.md  VERIFICATION_COMPLETE.md  _typos.toml  contributing.html  genindex.html  index.html  install.html  justfile  objects.inv  package-lock.json  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: CHANGELOG.doctree  contributing.doctree  environment.pickle  index.doctree  install.doctree
_modules/: index.html
_sources/: CHANGELOG.md.txt  index.md.txt  install.md.txt
ast-grep-rules/: README.md  migration.yml
docs/: CONVENTIONS.md  DIATAXIS.md
explanations/: data-management.html  h5-readers.html  index.html  plugin-system.html  rules-system.html  unit-system.html  versioning.html
how-tos/: apply-rules.html  attach-timeseries.html  build-exporters.html  build-parsers.html  configuration.html  configure-data-files.html  configure-data-settings.html  convert-units.html  create-function-plugins.html  create-rule-filters.html  create-rules.html  data-reading.html  datafile-basics.html  datastore-management.html  define-rule-mappings.html  exporter-basics.html  file-operations.html  h5_readers.html  index.html  manage-datastores.html  manage-systems.html  manage-versions.html  parser-basics.html  plugin-registration.html  plugin-standards.html  plugin-usage.html  process-file-data.html  read-data-files.html  read-hdf5-files.html  register-plugins.html  run-plugins.html  structure-plugin-directories.html  system-operations.html  timeseries-files.html  unit-operations.html  upgrade-data-files.html  upgrade-data.html  (+2 more)
(+384 files in other folders)
