[project]
name = "r2x-core"
version = "0.0.3"
authors = [
    { name = "pesap", email = "pesap@users.noreply.github.com" },
    { name = "Obika Kodi", email = "kodi.obika@nrel.gov" },
    { name = "Vivienne Liu", email = "vivienne.liu@nrel.gov"},
]
maintainers = [
    { name = "pesap", email = "pesap@users.noreply.github.com" },
]
description = "R2X Core Framework"
license = {file = "LICENSE.txt"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: File Formats :: JSON",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator"
]
dependencies = [
    "h5py>=3.13.0",
    "infrasys>=v1.0.0rc1",
    "loguru>=0.7.3",
    "polars>=1.33.1",
    "pydantic>=2.11.9,<3",
]

[dependency-groups]
dev = [
    "h5py-stubs>=0.1.2",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-coverage>=0.0",
    "ruff>=0.13.2",
]
docs = [
    "autodoc-pydantic",
    "furo>=2025.9.25",
    "ghp-import",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-tabs",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.mypy]
strict = true
exclude = ["tests/"]
plugins = [
  "pydantic.mypy"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
